// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` * Pruebas en el componente <SearchScreen />   - Debe de Mostrarse correctamente con valores por defecto 1`] = `
Array [
  <h1>
     Busquedas 
  </h1>,
  <hr />,
  <form
    action="submit"
    className="form_search"
    onSubmit={[Function]}
  >
    <div
      className="form_section"
    >
      <input
        autoComplete="off"
        className="form_input"
        name="searchText"
        onChange={[Function]}
        placeholder="Buscar un Heroe"
        type="text"
        value=""
      />
    </div>
    <div
      className="form_section_btn"
    >
      <button
        className="btn_search"
        type="submit"
      >
        Search
        <i
          className="fas fa-search"
        />
      </button>
    </div>
  </form>,
  <hr />,
  <div
    className="results"
  >
    <div>
      <h3
        className="title_results"
      >
         Resultados: 
      </h3>
      <p
        className="alert_info"
      >
         Busca un Heroe 
      </p>
    </div>
    <div
      className="cards_results"
    />
  </div>,
]
`;

exports[` * Pruebas en el componente <SearchScreen />   - Debe de mostrar a Batman y el valor del QueryString 1`] = `
Array [
  <h1>
     Busquedas 
  </h1>,
  <hr />,
  <form
    action="submit"
    className="form_search"
    onSubmit={[Function]}
  >
    <div
      className="form_section"
    >
      <input
        autoComplete="off"
        className="form_input"
        name="searchText"
        onChange={[Function]}
        placeholder="Buscar un Heroe"
        type="text"
        value="batman"
      />
    </div>
    <div
      className="form_section_btn"
    >
      <button
        className="btn_search"
        type="submit"
      >
        Search
        <i
          className="fas fa-search"
        />
      </button>
    </div>
  </form>,
  <hr />,
  <div
    className="results"
  >
    <div>
      <h3
        className="title_results"
      >
         Resultados: 
      </h3>
    </div>
    <div
      className="cards_results"
    >
      <div
        className="card animate__animated animate__fadeIn"
      >
        <div
          className="card_img"
        >
          <img
            alt="Batman"
            src="/assets/dc-batman.jpg"
          />
        </div>
        <h3
          className="dc"
        >
           
          Batman
           
        </h3>
        <div
          className="card_info"
        >
          <div
            className="card_text"
          >
            <p>
               
              Bruce Wayne
               
            </p>
          </div>
          <div
            className="card_link"
          >
            <a
              className="link"
              href="/hero/dc-batman"
              onClick={[Function]}
            >
              Mas 
              <i
                className="fas fa-arrow-right"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[` * Pruebas en el componente <SearchScreen />   - Debe de mostrar un error si no encuentra un Heroe 1`] = `
Array [
  <h1>
     Busquedas 
  </h1>,
  <hr />,
  <form
    action="submit"
    className="form_search"
    onSubmit={[Function]}
  >
    <div
      className="form_section"
    >
      <input
        autoComplete="off"
        className="form_input"
        name="searchText"
        onChange={[Function]}
        placeholder="Buscar un Heroe"
        type="text"
        value="batman12343"
      />
    </div>
    <div
      className="form_section_btn"
    >
      <button
        className="btn_search"
        type="submit"
      >
        Search
        <i
          className="fas fa-search"
        />
      </button>
    </div>
  </form>,
  <hr />,
  <div
    className="results"
  >
    <div>
      <h3
        className="title_results"
      >
         Resultados: 
      </h3>
      <p
        className="alert_danger"
      >
         No hay resultados para: 
        batman12343
         
      </p>
    </div>
    <div
      className="cards_results"
    />
  </div>,
]
`;
